@@ -2,6 +2,7 @@ Revision history for Pod-To-PDF
 
 {{$NEXT}}
     - Fix potential crash in PDF::Cairo::TextChunk
+    - Surround internal links with 'Reference' tags
 
 0.0.10  2022-03-09T05:45:32+13:00
     - Organize tagged content into sections.
